--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
     <!-- Custom styles for this template -->
     <link href="css/coming-soon.min.css" rel="stylesheet">
-
   </head>
 
   <body>
@@ -77,6 +76,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/coming-soon.min.js"></script>
+    <script src="testaccountCT.github.io/js/caliper-js/dist/caliperSensor-1.1.1.js"></script>
 
   </body>
 
