--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/coming-soon.min.js"></script>
-    <script src="testaccountCT.github.io/js/caliper-js/dist/caliperSensor-1.1.1.js"></script>
+    <script src="js/caliper-js/dist/caliperSensor-1.1.1.js"></script>
 
   </body>
 
