--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Coming Soon - Start Bootstrap Theme</title>
+    <title>TEST</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,9 +39,9 @@
               <p class="mb-5">We're working hard to finish the development of this site. Our target launch date is
                 <strong>January 2019</strong>! Sign up for updates using the form below!</p>
               <div class="input-group input-group-newsletter">
-                <input type="email" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon">
+                <input type="email" id="textfield" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon">
                 <div class="input-group-append">
-                  <button class="btn btn-secondary" type="button">Notify Me!</button>
+                  <button class="btn btn-secondary" type="button" id="btn" onclick="submitForm()">Notify Me!</button>
                 </div>
               </div>
             </div>
@@ -76,8 +76,9 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/coming-soon.min.js"></script>
-    <script src="js/caliperSensor-1.1.1.js"></script>
+    <!-- <script src="js/caliperSensor-1.1.1.js"></script> -->
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </body>
 
 </html>
