--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <div class="input-group input-group-newsletter">
                 <input type="email" id="textfield" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon">
                 <div class="input-group-append">
-                  <button class="btn btn-secondary" type="button" id="btn" onclick="submitForm()">Notify Me!</button>
+                  <button class="btn btn-secondary" type="button" id="btn"">Notify Me!</button>
                 </div>
               </div>
             </div>
