--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <p class="mb-5">We're working hard to finish the development of this site. Our target launch date is
                 <strong>January 2019</strong>! Sign up for updates using the form below!</p>
               <div class="input-group input-group-newsletter">
-                <input type="email" id="textfield" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon">
+                <input name = "textfield" type="email" id="textfield" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon">
                 <div class="input-group-append">
                   <button class="btn btn-secondary" type="button" id="btn"">Notify Me!</button>
                 </div>
